rust/crates/codec-pandoc/src/snapshots/pandoc_fragments@subscript.json.snap
---
source: rust/crates/codec-pandoc/src/decode.rs
expression: json
input_file: fixtures/fragments/pandoc/subscript.json

---
[
  {
    "type": "Paragraph",
    "content": [
      "Subscripts like H",
      {
        "type": "Subscript",
        "content": [
          "2"
        ]
      },
      "0."
    ]
  }
]
